# mouse-entropy

./: .gitgnore  Cargo.toml  PKGBUILD  README.md  build.sh  clean.sh  mouse-entropy.install  mouse-entropy.service  mouse-entropy.toml
src/: commands.rs  config.rs  main.rs  storage.rs
